# CPyIPC

./: CMakeLists.txt  README.md  interface.cpp  interface.h  interface_base.h  pybind.cpp
examples/: main.cpp  main2.cpp
